src/controller/middleware/snapshots/roco_rs__controller__middleware__cors__tests__cors_OPTIONS_[allow_origins].snap
---
source: src/controller/middleware/cors.rs
expression: "(format!(\"access-control-allow-origin: {:?}\",\nresponse.headers().get(\"access-control-allow-origin\")),\nformat!(\"vary: {:?}\", response.headers().get(\"vary\")),\nformat!(\"access-control-allow-methods: {:?}\",\nresponse.headers().get(\"access-control-allow-methods\")),\nformat!(\"access-control-allow-headers: {:?}\",\nresponse.headers().get(\"access-control-allow-headers\")),\nformat!(\"access-control-expose-headers: {:?}\",\nresponse.headers().get(\"access-control-expose-headers\")),\nformat!(\"allow: {:?}\", response.headers().get(\"allow\")),)"
---
(
    "access-control-allow-origin: Some(\"http://example.com\")",
    "vary: Some(\"origin, access-control-request-method, access-control-request-headers\")",
    "access-control-allow-methods: Some(\"*\")",
    "access-control-allow-headers: Some(\"*\")",
    "access-control-expose-headers: None",
    "allow: Some(\"GET,HEAD\")",
)
